plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'cap.backend'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.jsoup:jsoup:1.16.1'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'commons-io:commons-io:2.11.0'

	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
	implementation 'org.jsoup:jsoup:1.16.1'
	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.14.9'
	implementation group: 'com.azure', name: 'azure-ai-openai',version: '1.0.0-beta.3'
	implementation'org.slf4j:slf4j-simple:1.7.9'

	implementation 'com.theokanning.openai-gpt3-java:api:0.16.1'
	implementation 'com.theokanning.openai-gpt3-java:client:0.16.1'
	implementation 'com.theokanning.openai-gpt3-java:service:0.16.1'
	implementation 'org.mariadb.jdbc:mariadb-java-client'
}

tasks.named('test') {
	useJUnitPlatform()
}
